syntax = "proto3";

package com.mark.grpc.demo.provider.user;

option java_multiple_files = true;

message UserRequest {
  string user_name = 1;
}

message UserResponse {
  int32 user_id = 1;
  string user_name = 2;
}

service UserService {
  rpc getUser(UserRequest) returns(UserResponse) {}
}
